@@ -1,0 +1,1 @@
+declare x as I of class C of namespace N
