@@ -54,6 +54,7 @@ The characters are:
 + `l` = `long`
 + `m` = `_Imaginary`, member of class, or `mutable`
 + `n` = name, nested, `noreturn`, or `union`
++ `ns` = `namespace`
 + `nt` = non-throwing
 + `o` = `operator`, `override`, or `thread_local`
 + `p` = pointer
