@@ -1,0 +1,1 @@
+cdecl @ @ -xc++ @ namespace N { class C { typedef int I; }; }; explain N::C::I x @ 0
